Fix login form layout issues.

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -275,3 +275,87 @@ footer
     vertical-align:middle;
     margin: 2px;
 }
+
+/*_______________________________________________________________________ 
+|                                                                        |
+|              Forms styles                                              |
+|_______________________________________________________________________*/
+/* Base form styles */
+.base-form {
+	
+	background-color: gray;
+	padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 20px;
+	margin-top: 100px;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 4px;
+    margin-bottom: 0px;
+	padding-bottom: 0px;
+	font-size: small;
+    color: #ffffff;
+}
+
+.base-form-header{
+    margin-bottom: 20px;
+}
+
+.base-form .form-control  {
+	border-color: #d5d5d5;
+    box-shadow: none;
+ 	height: 35px;
+    outline: none;
+    border-radius: 4px  !important;
+    transition: all 0.5s;
+	/*margin-left: 20px;*/
+	/*padding-left: 10px;*/
+	font-size: 17px;	
+}
+
+.base-form .form-control:focus {
+    border: solid #202020 1px;
+	border-width: 2px;
+   
+
+}
+
+.base-form select{
+	padding-top: 0px;
+}
+.base-form textarea {
+    min-height: 50px;
+	margin-top: 6px;
+	width:100%;
+	resize: vertical;
+	border-radius: 4px;
+}
+#btnSubmit, #btnCancel
+{
+    width:80px;
+    background-color: #404040;
+    color:#A0A0A0;
+    font-size: 17px;
+    margin: 2px;
+}
+
+#btnSubmit:hover, #btnCancel:hover{
+    color:white;
+}
+.base-footer{
+    margin-top: 20px;
+	max-width: 80px;
+}
+
+#login-form{
+    width:300px;
+}
+
+.feedback{
+	color: orange;
+	font-size: medium;
+    width:100%;
+    text-wrap-mode: nowrap;
+    margin-left: -50px;
+ 
+}
